# THEWEB

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  secret.key
backend/src/: main.rs  secret.key
db/: .env  Cargo.toml
db/migrations/2023-01-31-175933_create_users/: up.sql
db/migrations/2023-02-11-215836_creating_chats/: down.sql  up.sql
db/src/: insertables.rs  lib.rs  schema.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: app.rs  modules.rs
frontend/src/modules/: pages.rs  requests.rs  router.rs
frontend/src/modules/pages/: chat.rs  list_users.rs  login.rs  logout.rs  navbar.rs  register.rs
mailer/: Cargo.toml
mailer/src/: lib.rs
models/: Cargo.toml
models/src/: lib.rs
