[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models"}
mailer = { path = "../mailer"}
db = { path = "../db"}
actix-web = "4.3.0"
serde = "1.0.152"
actix-cors = "0.6.4"

password-hash = "0.4.2"
argon2 = "0.4.1"

base64 = "0.21.0"

jsonwebtoken = "8.2.0"

jwt-simple = "0.11.3"

lazy_static = "1.4.0"
