[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models"}
diesel = { version = "2.0.2", features = [
    "postgres",
    "serde_json",
    "uuid",
    "chrono"]}
uuid = "1.2.2"
serde = { version = "1.0.152", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
chrono = { version = "0.4.23", features = ["serde"] }

dotenvy = "0.15.6"
