[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.2.2", features = ["serde"] }
serde =  { version = "1.0.152", features = ["derive"] }
diesel = {version = "2.0.2", default-features = false }

regex = "1.7.1"
